new order and remove order function
