# middleware/authorization.js
@@ -1,8 +1,6 @@
 const jwt = require("jsonwebtoken");
 const role = require("../configs/role");
-const { isTokenExpired } = require("../utils/index");
 const { responseJson } = require("../utils/response");
-const refreshToken = require("./refreshToken");
 const authorization = {
     admin: async (req, res, next) => {
         try {
@@ -10,12 +8,15 @@ const authorization = {
 
             jwt.verify(token, process.env.ACCESS_TOKEN_SECRET_KEY, async (error, payload) => {
                 if (error) {
-                    if (isTokenExpired(token)) {
-                        refreshToken(req, res);
-                        return next();
-                    }
+                    return responseJson({
+                        res,
+                        statusCode: 401,
+                        msg: {
+                            en: "token is invalid, please login again.",
+                            vn: "token không hợp lệ, vui lòng đăng nhập lại.",
+                        },
+                    });
                 }
-
                 if (payload && payload.role.toUpperCase() == role.admin) {
                     return next();
                 } else {
@@ -42,11 +43,56 @@ const authorization = {
             });
         }
     },
-    manager: async (req, res, next) => {
+    staff: async (req, res, next) => {
         try {
             const token = req.query.token || req.headers["x-access-token"] || null;
             jwt.verify(token, process.env.SECRET_KEY, async (error, payload) => {
-                if (payload.data.role.toUpperCase() == role.admin || payload.data.role.toUpperCase() == role.manager) {
+                if (error) {
+                    return responseJson({
+                        res,
+                        statusCode: 401,
+                        msg: {
+                            en: "token is invalid, please login again.",
+                            vn: "token không hợp lệ, vui lòng đăng nhập lại.",
+                        },
+                    });
+                }
+                if (payload && payload.role.toUpperCase() == role.staff) {
+                    return next();
+                } else {
+                    return res.status(401).json({
+                        status: false,
+                        msg: {
+                            en: "Permission denied! Only admin is allowed to access this enpoint!",
+                            vn: "Bạn không có quyền truy cập. Vui lòng liên hệ quản trị viên!",
+                        },
+                    });
+                }
+            });
+        } catch (error) {
+            return res.status(500).json({
+                status: false,
+                statusCode: 500,
+                msg: { en: "Interal Server Error" },
+                error: error.message,
+            });
+        }
+    },
+    CommisChef: async (req, res, next) => {
+        try {
+            const token = req.query.token || req.headers["x-access-token"] || null;
+            jwt.verify(token, process.env.SECRET_KEY, async (error, payload) => {
+                if (error) {
+                    return responseJson({
+                        res,
+                        statusCode: 401,
+                        msg: {
+                            en: "token is invalid, please login again.",
+                            vn: "token không hợp lệ, vui lòng đăng nhập lại.",
+                        },
+                    });
+                }
+                if (payload && payload.role.toUpperCase() == role.CommisChef) {
                     return next();
                 } else {
                     return res.status(401).json({
